--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,5 +15,8 @@
         <activity android:name=".SecondActivity"
                   android:label="@string/app_name">
         </activity>
+        <activity android:name=".ThirdActvitiy"
+                  android:label="@string/app_name">
+        </activity>
     </application>
 </manifest>
